# OpheliaFabric

./: index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ServerSelector.vue  TitleBar.vue
