[package]
name = "ophelia_fabric"
version = "0.1.1"
description = "Ophelia Fabric"
authors = ["Ophelia Matrix"]
license = "LGPL-2.1"
repository = "https://github.com/Effect-Wei/OpheliaFabric"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
dotenv = "0.15"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
base64 = "^0.22.1"
ipnet = "2.9.0"
once_cell = "1.19.0"
ping-rs = "0.1.2"
regex = "1.10.4"
reqwest = { version = "^0.12.4", features = ["blocking", "json"] }
wireguard-nt = "0.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
