[package]
name = "ophelia_fabric"
version = "0.1.1"
description = "Ophelia Fabric"
authors = ["Ophelia Matrix"]
license = "LGPL-2.1"
repository = "https://github.com/Effect-Wei/OpheliaFabric"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }
dotenv = "0.15"

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-http = "2.4.3"
tauri-plugin-shell = "2.2.1"
tauri-plugin-updater = "2.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
aes-gcm = "0.10.3"
base64 = "^0.22.1"
ipnet = "2.11.0"
once_cell = "1.21.3"
ping-rs = "0.1.2"
regex = "1.11.1"
reqwest = { version = "^0.12.15", features = ["blocking", "json"] }
wireguard-nt = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
